# LegalEase

./: README.md  app.py  app.yaml  backend.py  case_data.csv  mapping.csv  pyproject.toml
