[project]
name = "legalease"
version = "0.1.0"
description = "Legal AI Assistant for IPC to BNS transition (Streamlit + Sarvam API)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  # Core App UI
  "streamlit>=1.30.0",
  
  # Data handling and traditional NLP (TF-IDF)
  "pandas~=2.2.3",
  "numpy>=1.24.0",
  "scikit-learn>=1.2.0",
  
  # External API calls (Sarvam API)
  "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
  "network: tests that call external HTTP (opt-in)",
]
